# light

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  check.txt  check2.txt  crates.js  index.html  index.md  pre_commit.sh  search-index.js  settings.html  source-files.js
.github/workflows/: build.yaml  coverage.yaml  docs.yaml  style.yaml  test_deploy.yml  tests.yaml
docs/: index.html
docs/rustdoc/: .rustc_info.json
docs/rustdoc/doc/: search-index.js  settings.html  source-files.js
docs/rustdoc/doc/simple_light/: all.html  fn.main.html  index.html
docs/rustdoc/doc/solar_model/: all.html  constant.PI.html  index.html  sidebar-items.js  type.Float.html
docs/validation/: incident_solar_radiation.html
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
rustdoc/: .future-incompat-report.json  .rustc_info.json
rustdoc/debug/.fingerprint/ahash-554516469d37fe6c/: lib-ahash  lib-ahash.json
rustdoc/debug/.fingerprint/ahash-6c39314592b3fd28/: lib-ahash  lib-ahash.json
rustdoc/debug/.fingerprint/ahash-7687b7411bea927f/: lib-ahash  lib-ahash.json
rustdoc/debug/.fingerprint/ahash-76bd99a7ec59c126/: lib-ahash  lib-ahash.json
rustdoc/debug/.fingerprint/ahash-80b351e55539a77a/: lib-ahash  lib-ahash.json
rustdoc/debug/.fingerprint/ahash-90dc55b11e5e80a0/: lib-ahash  lib-ahash.json
rustdoc/debug/.fingerprint/ahash-be7e3cc387058bee/: lib-ahash  lib-ahash.json
rustdoc/debug/.fingerprint/ahash-c04e3a1a11688178/: lib-ahash  lib-ahash.json
rustdoc/debug/.fingerprint/ahash-cb4d48d016dca4e7/: lib-ahash  lib-ahash.json
rustdoc/debug/.fingerprint/ahash-dc672708c7d1392a/: lib-ahash  lib-ahash.json
rustdoc/debug/.fingerprint/ahash-e5f986c92cb80a89/: lib-ahash  lib-ahash.json
rustdoc/doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
rustdoc/doc/light/: all.html  constant.PI.html  index.html  sidebar-items.js  struct.IRViewFactorSet.html  struct.OpticalInfo.html  type.Float.html
rustdoc/doc/simple_light/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Inputs.html
rustdoc/doc/solar_model/: all.html  constant.PI.html  index.html  sidebar-items.js  type.Float.html
simple_light/: all.html  fn.main.html  index.html
solar_model/: all.html  constant.PI.html  index.html  sidebar-items.js  type.Float.html
solar_model/colour_matrix/: fn.average_matrix.html  fn.colour_matrix_to_luminance.html  fn.colour_matrix_to_radiance.html  fn.read_colour_matrix.html  fn.read_matrix.html  fn.save_colour_matrix.html  fn.save_matrix.html  index.html  sidebar-items.js  type.ColourMatrix.html
solar_model/daylight_coefficients/: fn.calc_dc.html  index.html  sidebar-items.js  struct.DCFactory.html
solar_model/model/: index.html  sidebar-items.js  struct.SolarModel.html  struct.SolarModelOptions.html
solar_model/solar_surface/: fn.get_sampler.html  index.html  struct.SolarSurface.html
src/: bin.rs  climate_based.rs  colour_matrix.rs  daylight_coefficients.rs  lib.rs  model.rs  optical_info.rs  solar_surface.rs
src/simple_light/: bin.rs.html
src/solar_model/: colour_matrix.rs.html  daylight_coefficients.rs.html  lib.rs.html  model.rs.html  solar_surface.rs.html
test_data/: NZL_Wellington.Wellington.934360_IWEC.epw  SIM_RESULTS_WELLINGTON.csv  SIM_RESULTS_WELLINGTON_NO_SUN.csv  Wellington.wea  blind.rad  dc_collapsed.mtx  full_dc.mtx  full_dc_rust.mtx  naive_radiance_sim.rb  octree.oct  one_surface.rad  room.rad  sensors.pts  white_sky.rad  window.rad
tests/: barcelona.epw  east.idf  north.idf  sim_energyplus.sh  south.idf  validate_ir_radiation.rs  validate_solar_radiation.rs  west.idf
tests/barcelona_east/: eplusout.csv
tests/barcelona_north/: eplusout.csv
tests/barcelona_south/: eplusout.csv
tests/barcelona_west/: eplusout.csv
tests/wall/: wall.spl
tests/wellington_east/: eplusout.csv
tests/wellington_north/: eplusout.csv
tests/wellington_south/: eplusout.csv
tests/wellington_west/: eplusout.csv
validation/: empty.md  incident_ir_radiation.html  incident_solar_radiation.html
(+1185 files in other folders)
