[package]
name = "solar_model"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
weather = { git = "https://github.com/SIMPLE-BuildingSimulation/weather.git" }
simple_model = {git = "https://github.com/SIMPLE-BuildingSimulation/simple_model.git"}
communication_protocols = { git = "https://github.com/SIMPLE-BuildingSimulation/communication_protocols.git" }
solar = { git = "https://github.com/SIMPLE-BuildingSimulation/solar.git" }
# solar = { path = "../solar" }
rendering = { git = "https://github.com/SIMPLE-BuildingSimulation/rendering.git" }
# rendering = {path="../rendering" }
matrix = { git = "https://github.com/SIMPLE-BuildingSimulation/matrix.git" }
geometry3d = {git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git", features=["parallel"]}
# geometry3d = {path="../geometry3d"}
clap = "2.33.3"
rand = "0.8.4"
rayon = {version = "1.5.1", optional = true}

[lib]
name = "solar_model"
path = "src/lib.rs"

[[bin]]
name = "simple_light"
path = "src/bin.rs"


[profile.release]
debug = true
lto = true
codegen-units = 1

[features]
default = []
parallel = [ "rayon", "rendering/parallel" ]
float = ["calendar/float", "weather/float", "simple_model/float", "solar/float", "rendering/float", "geometry3d/float"]