[package]
name = "light"
version = "0.1.0"
authors = ["German Molina <germolinal@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calendar = { git = "https://github.com/SIMPLE-BuildingSimulation/calendar.git" }
weather = { git = "https://github.com/SIMPLE-BuildingSimulation/weather.git" }
simple_model = { git = "https://github.com/SIMPLE-BuildingSimulation/simple_model.git" }
# simple_model = { path = "../simple_model" }
communication_protocols = { git = "https://github.com/SIMPLE-BuildingSimulation/communication_protocols.git" }
# communication_protocols = {path="../communication_protocols"}
solar = { git = "https://github.com/SIMPLE-BuildingSimulation/solar.git" }
rendering = { git = "https://github.com/SIMPLE-BuildingSimulation/rendering.git" }
matrix = { git = "https://github.com/SIMPLE-BuildingSimulation/matrix.git" }
geometry3d = { git = "https://github.com/SIMPLE-BuildingSimulation/geometry3d.git" }
clap = { version = "4.0.14", features = ["derive"] }
rayon = { version = "1.5.1", optional = true }
serde = { version = "1.0.142", features = ['derive'] }
serde_json = { version = "1.0.83" }


[dev-dependencies]
schedule = { git = "https://github.com/SIMPLE-BuildingSimulation/schedule.git" }
simple_test_models = { git = "https://github.com/SIMPLE-BuildingSimulation/simple_test_models.git" }
validate = { git = "https://github.com/SIMPLE-BuildingSimulation/validate.git" }
json5 = {version="0.4.1"}


[lib]
name = "light"
path = "src/lib.rs"

[[bin]]
name = "simple_light"
path = "src/bin.rs"


[profile.release]
debug = true
lto = true
codegen-units = 1

[features]
default = []
parallel = [
    "rayon",
    "rendering/parallel",
    # "matrix/parallel",
    "geometry3d/parallel",
]
float = [
    "communication_protocols/float",
    "calendar/float",
    "weather/float",
    "simple_model/float",
    "solar/float",
    "rendering/float",
    "geometry3d/float",
]
